# taskit

./: .gitmodules  CMakeLists.txt  Dockerfile  Karan_Dockerfile  README.md  _config.yml  docker-compose.yml  examples.md  index.md  making_objects.md  package.xml  vicon_calibration.md
.devcontainer/: devcontainer.json
config/: DEP_aria_franka_hand.xacro  DEP_peter_aria_panda_arm.xacro  aria_panda_arm.xacro  custom_panda_arm.xacro  dont_need_custom_panda_arm.xacro  environment.yaml  franka_hand.xacro  objects.yaml  panda_arm.srdf.xacro  panda_arm.urdf.xacro  panda_arm_config.yaml  panda_arm_hand.srdf.xacro  workspace.yaml
docs/: _config.yml
docs/examples/: examples.md
environment_config/: environment.yaml  icra_environment.yaml  icra_task_set.yaml  icra_workspace.yaml  objects.yaml  ow_environment.yaml  panda_arm_config.yaml  task_set.yaml  test_arch_environment.yaml  test_arch_task_set.yaml  workspace.yaml
franka_config/common/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro
franka_config/panda/: hand.xacro  joint_limits.yaml  panda.srdf.xacro  panda.urdf.xacro
icra24_exp_scripts/: ttt_humanwin_human_stochasticity.py  ttt_humanwin_no_stochasticity.py  ttt_humanwin_robot_stochasticity.py  ttt_robotwin_human_stochasticity.py  ttt_robotwin_no_stochasticity.py  ttt_robotwin_robot_stochasticity.py
ijcai24_exp_scripts/: be_reach_unrealizable_2b_5l_task.py
iros23_exp_scripts/: adv_str.py  regret_adv_str.py  regret_coop_str.py  regret_human_1_step_coop_str.py  regret_human_2_step_coop_str.py  simple_pick_place.py
launch/: DEP_hello.launch  DEP_move_group.launch  DEP_panda_moveit.launch  DEP_planner_open_loop_simulation.launch  DEP_planner_simulation.launch  DEP_planning_context.launch  DEP_system.launch  DEP_test_debug.launch  DEP_test_real.launch  DEP_test_sim.launch  DEP_vicon_pick_place.launch  basic_manipulator_node_sim.launch  custom_planning_context.launch  franka_control.launch  load_parameters.launch  manipulator_node.launch  manipulator_node_real.launch  manipulator_node_real_grasp.launch  manipulator_node_sim.launch  manipulator_node_sim_grasp copy.launch  manipulator_node_sim_grasp.launch  move_group.launch  ow_test_parameters.launch  planner_closed_loop_simulation.launch  planner_open_loop_simulation.launch  planner_real.launch  planner_simulation.launch  planning_context.launch  simulation.launch  taskit.rviz  test_parameters.launch  vicon_franka_vrpn.launch
model_files/: model.txt
msg/: MovementProperties.msg
python_srv_node/: robot_srv_client.py
src/: CMakeLists.txt  action_primitive_node.cpp  advanced_manipulator_node_real.cpp  advanced_manipulator_node_sim.cpp  andrew_node.cpp  basic_manipulator_node_sim.cpp  com_node.cpp  com_node_original.cpp  manipulator_node.cpp  manipulator_node_grasp.cpp  manipulator_node_grasp_original.cpp  manipulator_node_real.cpp  manipulator_node_sim.cpp  ordered_planner_node.cpp  pipeline_trigger_node.cpp  plan_query_kickoff_node.cpp  planner_node.cpp  planning_node.cpp  simple_manipulator_node.cpp  vicon_franka_integration_node.cpp  vicon_pick_place_node.cpp
src/ocean_waters/: ow_action_primitive_node.cpp  ow_planner_node.cpp
srv/: ActionSingle.srv  GetObjectLocations.srv  GraspSrv.srv  PlanningQuery.srv  PlanningQuery_srv_original.srv  PreferenceQuery.srv  Release.srv  ReleaseSrv.srv  RunQuery.srv  SetObjectLocations.srv  Stow.srv  StowSrv.srv  Strategy.srv  Transit.srv  TransitSrv.srv  UpdateEnv.srv
taskit/: AdvancedActionPrimitives.h  BaseActionPrimitives.h  BasicObjects.h  CMakeLists.txt  Config.h  FancyObjects.h  Gripper.h  LinearMover.h  ManipulatorNode.h  ManipulatorNodeInterface.h  ManipulatorNode_impl.h  ManipulatorProperties.h  MovementAnalysis.cpp  MovementAnalysis.h  Object.cpp  Object.h  PoseTracker.cpp  PoseTracker.h  PredicateHandler.cpp  PredicateHandler.h  Quaternions.h  TaskIt.h  Tools.h  Visualizer.cpp  Visualizer.h
